force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <defaultValue>&quot;a) The offer is for total quantity, if partial quantity is ordered, we reserve the right to accept or reject the order.&quot; + 
&quot;&lt;br/&gt; b) Production and Delivery time is given considering current mill booking position; A firm delivery schedule will be mutually discussed &amp; agreed upon at the time of contract signing.&quot; + 
&quot;&lt;br/&gt; c) Any amendments of a.m. conditions must be subject to prior approval.&quot;</defaultValue>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>