force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_On_Delivery_Rus__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_On_Delivery_Rus__c</fullName>
    <defaultValue>&quot;указать при оформлении заказа&quot;</defaultValue>
    <label>Additional Terms On Delivery (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>