force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_On_Delivery_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_On_Delivery_Ukr__c</fullName>
    <defaultValue>&quot;зазначати під час оформлення замовлення&quot;</defaultValue>
    <label>Additional Terms On Delivery (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>