force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Ukr__c</fullName>
    <defaultValue>&quot;- Пропозиція стосується загальної кількості замовлення. Якщо замовлена часткова кількість, ми залишаємо за собою право прийняти або відхилити замовлення.&quot; + 
&quot;&lt;br/&gt;- Час виробництва та доставки вказано з урахуванням поточної резервної позиції; Графік доставки взаємно обговорюються та узгоджується під час підписання контракту.&quot; + 
&quot;&lt;br/&gt;- Будь-які зміни до умов повинні бути попередньо схвалені.&quot;</defaultValue>
    <description>General Additional terms in Ukrainian</description>
    <label>Additional Terms (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>