force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_Wheels__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Wheels__c</fullName>
    <defaultValue>&quot;- The warranty period is as per the standard above (5 years). All the issues concerning the warranty details should be specified in the order/order confirmation.&quot; +
&quot;&lt;br/&gt;- The offer is valid only for the drawings, specifications and quantities specified above. If any changes are made it is subject for a change in offer.&quot; +
&quot;&lt;br/&gt;- The technical specification and drawings need to be signed by the customer before manufacturing can start.&quot; +
&quot;&lt;br/&gt;- All other conditions are according to our GTC.&quot;</defaultValue>
    <label>Additional Terms Wheels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>