force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_Wheels_Rus__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Wheels_Rus__c</fullName>
    <defaultValue>&quot;- Гарантийные обязательства согласно требованиям стандарта выше (напр.5 лет). Все вопросы касательно гарантийных обязательств должны быть указаны в заказе / или подтверждении заказа.&quot; +
&quot;&lt;br/&gt;- Предложение действует на чертежи, спецификации и количество продукции указанные выше. Если вносятся изменения в запрос, изменения должны быть указаны в предложении.&quot; +
&quot;&lt;br/&gt;- Техническая спецификация и чертежи должны быть подписаны Клиентом перед началом производства.&quot;</defaultValue>
    <label>Additional Terms Wheels (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>