force-app/main/default/objects/Bank_Details__mdt/fields/Additional_Terms_Wheels_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Wheels_Ukr__c</fullName>
    <defaultValue>&quot;- Гарантійні зобов&apos;язання відповідно до вимог стандарту вище (напр. 5 років). Всі питання щодо гарантійних зобов&apos;язань повинні бути вказані в замовленні / або під час підтвердження замовлення.&quot; + 
&quot;&lt;br/&gt;- Пропозиція є чинною стосовно креслень, специфікацій і кількості продукції, які подано вище. Якщо вносяться зміни в запит, зміни мають бути вказані в пропозиції.&quot; + 
&quot;&lt;br/&gt;- Технічна специфікація та креслення мають бути підписані Клієнтом перед початком виробництва.&quot;</defaultValue>
    <label>Additional Terms Wheels (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>