force-app/main/default/objects/Bank_Details__mdt/fields/BottomText__c.field-meta.xml
<CustomField>
    <fullName>BottomText__c</fullName>
    <defaultValue>&quot;&lt;p&gt;Length Tolerance:                                                                          +0/-1% For Each item in Meters &lt;/p&gt;&lt;p&gt;Production Time:                                                                           &lt;/p&gt;&lt;p&gt;               &lt;/p&gt;&lt;p&gt;Production Schedule&lt;/p&gt;&lt;p&gt;Item 1, 6, 7 – August 2017 Item 2 – February 2018&lt;/p&gt;&lt;p&gt;Item 3 – October 2017&lt;/p&gt;&lt;p&gt;Item 4 – May 2018&lt;/p&gt;&lt;p&gt;Item 5 – September 2017&lt;/p&gt;&lt;p&gt;&lt;br&gt;&lt;/p&gt;&lt;p&gt;Delivery Term:                                                                                FOB Any Port in Ukraine or CIF LIFO Alexandria Port&lt;/p&gt;&lt;p&gt;Shipment Method:                                                                        Open Top Containers&lt;/p&gt;&lt;p&gt;Partial Shipment:                                                                            Acceptable &lt;/p&gt;&lt;p&gt;Port of Shipment:                                                                          Odessa or Ilyichevsk, Ukraine&lt;/p&gt;&lt;p&gt;&lt;br&gt;&lt;/p&gt;&lt;p&gt;&lt;br&gt;&lt;/p&gt;&lt;p&gt;&lt;br&gt;&lt;/p&gt;&lt;p&gt;Payment Term:                                                               100% L/C within 45 days from Bill of Lading Date&lt;/p&gt;&lt;p&gt;Validity:                                                                                              120 Days from Bid Closing Date &lt;/p&gt;&lt;p&gt;Price Basis:                                                                                         Prices are offered both on FOB and CIF LIFO Incoterms&lt;/p&gt;&lt;p&gt;Other Terms &amp;amp; Conditions:&lt;/p&gt;&lt;p&gt;-         Acceptance of terms &amp;amp; conditions under the Tender No. 04/4574 For Tubing - VERIFY&lt;/p&gt;&lt;p&gt;-         Acceptance of Inspection Terms under the Tender No. 04/4574 For Tubing&lt;/p&gt;&lt;p&gt;&lt;br&gt;&lt;/p&gt;&quot;</defaultValue>
    <label>BottomText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>