force-app/main/default/objects/Bank_Details__mdt/fields/HeaderText__c.field-meta.xml
<CustomField>
    <fullName>HeaderText__c</fullName>
    <defaultValue>&quot;Dear Sirs,&lt;br/&gt;We thankfully acknowledge receipt of your enquiry &amp; we are pleased to submit our offer for the supply of materials with the following additional details:&quot;</defaultValue>
    <label>HeaderText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>