force-app/main/default/objects/Bank_Details__mdt/fields/Marking_Rus__c.field-meta.xml
<CustomField>
    <fullName>Marking_Rus__c</fullName>
    <defaultValue>&quot;по согласованию при размещении заказа&quot;</defaultValue>
    <label>Marking (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>