force-app/main/default/objects/Bank_Details__mdt/fields/Marking_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Marking_Ukr__c</fullName>
    <defaultValue>&quot;за узгодженням під час розміщення замовлення&quot;</defaultValue>
    <label>Marking (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>