force-app/main/default/objects/Bank_Details__mdt/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <defaultValue>&quot;To be agreed during order placement.&quot;</defaultValue>
    <label>Packing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>