force-app/main/default/objects/Bank_Details__mdt/fields/Packing_Rus__c.field-meta.xml
<CustomField>
    <fullName>Packing_Rus__c</fullName>
    <defaultValue>&quot;согласно стандартам завода-производителя&quot;</defaultValue>
    <label>Packing (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>