force-app/main/default/objects/Bank_Details__mdt/fields/Packing_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Packing_Ukr__c</fullName>
    <defaultValue>&quot;згідно зі стандартом завода-виробника&quot;</defaultValue>
    <label>Packing (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>