force-app/main/default/objects/Bank_Details__mdt/fields/Plastic_Caps_Rus__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Caps_Rus__c</fullName>
    <defaultValue>&quot;согласно стандартам завода-производителя&quot;</defaultValue>
    <label>Plastic Caps  (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>