force-app/main/default/objects/Bank_Details__mdt/fields/Plastic_Caps_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Caps_Ukr__c</fullName>
    <defaultValue>&quot;згідно зі стандартом завода-виробника&quot;</defaultValue>
    <label>Plastic Caps (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>