force-app/main/default/objects/Bank_Details__mdt/fields/Production_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Production_Delivery_Details__c</fullName>
    <defaultValue>&quot;Subject to receipt of purchase order, signed contract and appendix.&quot;</defaultValue>
    <label>Production/Delivery Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>