force-app/main/default/objects/Bank_Details__mdt/fields/Shipping_Marks__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Marks__c</fullName>
    <defaultValue>&quot;To be advised in the Purchase order.&quot;</defaultValue>
    <label>Shipping Marks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>