force-app/main/default/objects/Bank_Details__mdt/fields/Special_Shipping_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipping_Requirements__c</fullName>
    <defaultValue>&quot;-Max age of vessel and flag restrictions - None &lt;br/&gt;&quot; +

&quot;-Any additional Vessel Certificates required - None &lt;br/&gt;&quot; +

&quot;Dunnage Material - No Restriction &lt;br/&gt;&quot; +

&quot;-Advise any special shipping requirements for confirmation&lt;br/&gt;&quot;</defaultValue>
    <label>Special Shipping Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>