force-app/main/default/objects/Bank_Details__mdt/fields/Third_party_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Inspection__c</fullName>
    <defaultValue>&quot;In case applicable, please mention in the PO the inspection scope and the name of the third party inspection agency. Cost on inspection on buyers account&quot;</defaultValue>
    <label>Third party Inspection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>