force-app/main/default/objects/Bank_Details__mdt/fields/Third_party_Inspection_Rus__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Inspection_Rus__c</fullName>
    <defaultValue>&quot;просим указать при размещении заказа если требуется проведение инспекции&quot;</defaultValue>
    <label>Third party Inspection (Rus)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>