force-app/main/default/objects/Bank_Details__mdt/fields/Third_party_Inspection_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Inspection_Ukr__c</fullName>
    <defaultValue>&quot;просимо зазначати під час розміщення замовлення, якщо проведення інспекції є потрібним&quot;</defaultValue>
    <label>Third party Inspection (Ukr)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>